--- a/TicketSales/TicketSales.csproj
+++ b/TicketSales/TicketSales.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SendGrid" Version="9.29.2" />
   </ItemGroup>
 
 </Project>
